# DataStructsBook

./: CMakeLists.txt  test.cpp
chapter1/: Q12.cpp  Q19.cpp  Q20.cpp  Q21.cpp  Q22.cpp  Q23.cpp  Q24.cpp  Q25.cpp  Q26.cpp  Q27.cpp  Q28.cpp  Q29.cpp  Q30.cpp  Q32.cpp
chapter10/: CMakeLists.txt
chapter10/include/: dictionary.h  sortedArrayList.h
chapter10/src/: main.cpp
chapter11/: CMakeLists.txt  main.cpp
chapter11/include/: binaryTree.h  binaryTreeNode.h  linkedBinaryTree.h
chapter12/: CMakeLists.txt  main.cpp  maxHblt.h  maxHeap.emmx
chapter13/: CMakeLists.txt  main.cpp
chapter13/include/: completeWinnerTree.h  winnerTree.h
chapter14/: CMakeLists.txt  main.cpp
chapter14/include/: binarySearchTree.h  binaryTreeNode.h  bsTree.h  dictionary.h  indexedBSTree.h  linkedBinaryTree.h
chapter17/: CMakeLists.txt  maxHeap.h
chapter18/: CMakeLists.txt  code.cpp  code.h  main.cpp
chapter19/: CMakeLists.txt  main.cpp
chapter2/: Q36.cpp
chapter20/: CMakeLists.txt
chapter5/arrayList/: CMakeLists.txt
chapter5/arrayList/include/: arrayList.h  vectorList.h
chapter5/arrayList/src/: main.cpp
chapter6/chain/: CMakeLists.txt
chapter6/chain/include/: arrayList.h  chain.h  circularListWithHearder.hpp  doubleCircularList.hpp  doubleCircularListWithHeader.hpp  doubleLinkedList.hpp  extendedChain.h
chapter6/chain/src/: main.cpp
chapter7/linkedMatrix/: CMakeLists.txt
chapter7/linkedMatrix/include/: chain.h  extendedChain.h  linearList.h  linkedMatrix.h  printError.h
chapter7/linkedMatrix/src/: main.cpp
chapter7/matrix/include/: matrix.h
chapter7/matrix/src/: main.cpp
chapter7/sparseMatrix/include/: arrayList.h  linearList.h  sparseMatrix.h
chapter7/sparseMatrix/src/: main.cpp
chapter8/arrayStack/: CMakeLists.txt
chapter8/arrayStack/include/: arrayStack.h  stack.h
chapter8/arrayStack/src/: main.cpp
chapter8/linkedStack/: CMakeLists.txt
chapter8/linkedStack/include/: linkedStack.h  stack.h
chapter8/linkedStack/src/: main.cpp
chapter9/: CMakeLists.txt  main.cpp
chapter9/include/: arrayQueue.h  queue.h
